--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<h1 class="text-dark font-weight-bold"style="font-family: 'Acme', sans-serif;">PACIFIC SHIPPING</h1>
 			     	
 			     		<p class="text-light font-weight-bold" id="hello" style="font-family: 'Acme', sans-serif;
-							font-family: 'Questrial', sans-serif;"><strong>PACIFIC SHIPPING</strong>
+							font-family: 'Questrial', sans-serif;"><strong>Pacific Shiping</strong>
 							Pvt. Ltd. Was established in Jan 2016 and is serving the 
 							<u>National/International market</u> in the fields of <b>International Freight Forwarding</b>, Air and Sea, Import and Export, Custom Brokerage, local transportation and warehousing since Jan 2010. 
 						</p>
